2002-07-22  Jukka Pekka  <jiivonen@hutcs.cs.hut.fi>

	* functions.c: Added PDFRAYLEIGHTAIL(), PDFLOGNORM(), PDFGEOM(),
	PDFFDIST(), PDFTDIST(), PDFPARETO(), PDFLOGISTIC().

2002-07-22  Jukka Pekka  <jiivonen@hutcs.cs.hut.fi>

	* functions.c: Added PDFBINOM(), PDFNEGBINOM(), PDFPOISSON(),
	PDFWEIBULL().
	
2002-07-22  Jukka Pekka  <jiivonen@hutcs.cs.hut.fi>

	* gsl-pdf.c (random_bernoulli_pdf, random_binomial_pdf,
	random_cauchy_pdf, random_chisq_pdf, random_hypergeometric_pdf,
	random_landau_pdf, random_logistic_pdf, random_lognormal_pdf,
	random_negative_binomial_pdf, random_pareto_pdf,
	random_poisson_pdf, random_rayleigh_pdf, random_rayleigh_tail_pdf,
	random_tdist_pdf, random_weibull_pdf): Imported from the GSL.

	* functions.c: Added PDFBERNOULLI(), PDFCAUCHY(), PDFLANDAU(), and
	PDFRAYLEIGH().

2002-07-22  Jukka Pekka  <jiivonen@hutcs.cs.hut.fi>

	* gsl-pdf.c (random_gamma_pdf, random_beta_pdf, 
	random_exponential_pdf): Imported from GSL.

	* functions.c: Added PDFBETA(), PDFEXP(), PDFEXPPOW(), PDFGAMMA(),
	PDFLAPLACE().

2002-07-21  Jukka Pekka  <jiivonen@hutcs.cs.hut.fi>

	* functions.c: Added RANDGAUSSIANTAIL().

2002-07-21  Jukka Pekka  <jiivonen@hutcs.cs.hut.fi>

	* functions.c: Added RANDLANDAU().

2002-07-21  Jody Goldberg <jody@gnome.org>

	* Release 1.1.6

2002-07-21  Jukka Pekka  <jiivonen@hutcs.cs.hut.fi>

	* functions.c: Added RANDRAYLEIGHTAIL().

2002-07-21  Jukka Pekka  <jiivonen@cs145201.pp.htv.fi>

	* functions.c: Added RANDEXPPOW().

2002-07-18  Jukka Pekka  <jiivonen@hutcs.cs.hut.fi>

	* functions.c: Added RANDGUMBEL() and RANDLEVY().

2002-07-18  Jukka Pekka  <jiivonen@hutcs.cs.hut.fi>

	* functions.c: Added RANDTDIST(). Renamed RANDNORM() to
	RANDGAUSSIAN() since it takes the parms.

2002-07-18  Jukka Pekka  <jiivonen@hutcs.cs.hut.fi>

	* functions.c: Added RANDBETA(), RANDCHISQ(), RANDFDIST(), RANDGEOM(), 
	RANDHYPERG(), RANDLOG(), and RANDLOGISTIC().

2002-07-18  Jukka Pekka  <jiivonen@hutcs.cs.hut.fi>
