@@ -1,3 +1,9 @@
+2002-07-23  Jukka Pekka  <jiivonen@cs145201.pp.htv.fi>
+
+	* functions.c: Started moving probability density fns to fn-stat
+	since they belong to there.  Moved PDFGEOM() (renamed to
+	GEOMDIST()).
+
 2002-07-22  Jukka Pekka  <jiivonen@hutcs.cs.hut.fi>
 
 	* functions.c: Added PDFRAYLEIGHTAIL(), PDFLOGNORM(), PDFGEOM(),
